# genome_painter

./: .travis.yml  Makefile  Makefile.am  README.md  TODO  command_line_options.cpp  command_line_options.h  configure.ac  database.cpp  genome.h  kmer.cpp  kmer.h  main.cpp  output.cpp  output.h  paint.cpp  paint.h
scripts/: find_blocks.py  plot_painting.py  summarise_contigs.py  summarise_species.py
src/: Makefile.am  common.h  database.cpp  database.h  genome.cpp  kmer.cpp  kmer.h  version.h
src/counter/: Makefile  command_line_options.cpp  command_line_options.h  count.cpp  count.h  main.cpp  output.cpp  output.h
src/lib/: common.cpp  common.h  database.cpp  database.h  kmer.cpp  kmer.h  version.h
src/merger/: command_line_options.cpp  command_line_options.h  file.cpp  file.h  main.cpp  merge.cpp  merge.h  output.cpp  output.h  probability.cpp  probability.h  sql.cpp  sql.h
src/painter/: command_line_options.cpp  command_line_options.h  database.cpp  database.h  input.cpp  input.h  main.cpp  output.cpp  output.h  paint.cpp  paint.h  sql.cpp  sql.h
tests/: Makefile.am  test_kmer_encoding.cpp
